# workspacers.nvim

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: formatter.rs  json.rs  lib.rs
common/src/setup/: config.rs  logging.rs  mod.rs  path.rs
lua/workspacers/: commands.lua  init.lua  rpc_handler.lua  telescope.lua
scripts/: workspacers.ps1
workspacers-cli/: Cargo.toml
workspacers-cli/src/: add_workspace.rs  main.rs  operations.rs  picker.rs
workspacers-nvim/: Cargo.toml
workspacers-nvim/src/: main.rs  rpc_commands.rs  utils.rs
